--- a/ios/assina/Info.plist
+++ b/ios/assina/Info.plist
@@ -57,6 +57,7 @@
 	<array>
 		<string>Roboto-Bold.ttf</string>
 		<string>Roboto-Light.ttf</string>
+		<string>Roboto-Regular.ttf</string>
 	</array>
 </dict>
 </plist>
