Finalize layout of login

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "android": "react-native run-android"
   },
   "dependencies": {
+    "native-base": "^2.13.8",
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-gesture-handler": "^1.4.1",
@@ -29,7 +30,9 @@
   "jest": {
     "preset": "react-native"
   },
-  "rnpm":{
-    "assets":["./assets/fonts/"]
+  "rnpm": {
+    "assets": [
+      "./assets/fonts/"
+    ]
   }
 }
