--- a/package.json
+++ b/package.json
@@ -6,12 +6,19 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint .",
-    "android": "react-native run-android"
+    "android-dev": "react-native run-android",
+    "android-stage": "ENVFILE=.env.staging react-native run-android",
+    "android-prod": "ENVFILE=.env.production react-native run-android",
+    "ios-dev": "react-native run-ios",
+    "ios-stage": "ENVFILE=.env.staging react-native run-ios",
+    "ios-prod": "ENVFILE=.env.production react-native run-ios"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "native-base": "^2.13.8",
     "react": "16.8.6",
     "react-native": "0.60.5",
+    "react-native-config": "^0.11.7",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-reanimated": "^1.2.0",
     "react-navigation": "^4.0.5",
