--- a/ios/Podfile
+++ b/ios/Podfile
@@ -31,6 +31,8 @@ target 'assina' do
 
   pod 'react-native-config', :path => '../node_modules/react-native-config'
 
+  pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-community/async-storage'
+
   target 'assinaTests' do
     inherit! :search_paths
     # Pods for testing
