--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ios-prod": "ENVFILE=.env.production react-native run-ios"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.6.1",
     "axios": "^0.19.0",
     "native-base": "^2.13.8",
     "react": "16.8.6",
