--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.1",
     "axios": "^0.19.0",
+    "moment": "^2.24.0",
     "native-base": "^2.13.8",
     "react": "16.8.6",
     "react-native": "0.60.5",
