--- a/package.json
+++ b/package.json
@@ -6,12 +6,8 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint .",
-    "android-dev": "react-native run-android",
-    "android-stage": "ENVFILE=.env.staging react-native run-android",
-    "android-prod": "ENVFILE=.env.production react-native run-android",
-    "ios-dev": "react-native run-ios",
-    "ios-stage": "ENVFILE=.env.staging react-native run-ios",
-    "ios-prod": "ENVFILE=.env.production react-native run-ios"
+    "android": "react-native run-android",
+    "ios-dev": "react-native run-ios"
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.1",
