--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-gesture-handler": "^1.4.1",
     "react-native-loading-spinner-overlay": "^1.0.1",
     "react-native-reanimated": "^1.2.0",
+    "react-native-webview": "^7.4.0",
     "react-navigation": "^4.0.5",
     "react-navigation-stack": "^1.8.0"
   },
