--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-gesture-handler": "^1.4.1",
+    "react-native-html-to-pdf": "^0.8.0",
     "react-native-loading-spinner-overlay": "^1.0.1",
     "react-native-reanimated": "^1.2.0",
     "react-native-webview": "^7.4.0",
