--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/async-storage": "^1.6.1",
     "@types/react-native-loading-spinner-overlay": "^0.5.1",
     "axios": "^0.19.0",
+    "jetifier": "^1.6.4",
     "moment": "^2.24.0",
     "native-base": "^2.13.8",
     "react": "16.8.6",
