--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.1",
     "@types/react-native-loading-spinner-overlay": "^0.5.1",
+    "@types/react-native-vector-icons": "^6.4.4",
     "axios": "^0.19.0",
     "jetifier": "^1.6.4",
     "moment": "^2.24.0",
