--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -19,3 +19,8 @@
 
 android.useAndroidX=true
 android.enableJetifier=true
+
+MYAPP_UPLOAD_STORE_FILE=rededor.keystore
+MYAPP_UPLOAD_KEY_ALIAS=assessoriador
+MYAPP_UPLOAD_STORE_PASSWORD=rededor#2355
+MYAPP_UPLOAD_KEY_PASSWORD=rededor#2355
