--- a/ios/Podfile
+++ b/ios/Podfile
@@ -32,6 +32,8 @@ target 'assina' do
 
   pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-community/async-storage'
 
+  pod 'react-native-camera', :path => '../node_modules/react-native-camera'
+
   target 'assinaTests' do
     inherit! :search_paths
     # Pods for testing
