--- a/app.json
+++ b/app.json
@@ -1,8 +1,11 @@
 {
   "name": "assina",
   "displayName": "Assina",
-  "apiBaseUrl": "http://10.25.32.141:8081/assina-api",
-  "apiBaseUrl-pre-staging": "http://10.25.32.141:8081/assina-api",
-  "apiBaseUrl-local-cabo": "http://10.15.48.93:8080/assina-api",
-  "apiBaseUrl-local-wifi": "http://10.15.24.90:8080/assina-api"
+  "api": {
+    "baseUrl":"http://10.25.32.141:8081/assina-api",
+    "timeoutMillis": 30000
+  },
+  "baseUrl-pre-staging": "http://10.25.32.141:8081/assina-api",
+  "baseUrl-leonardo-cabo": "http://10.15.48.93:8080/assina-api",
+  "baseUrl-leonardo-wifi": "http://10.15.24.90:8080/assina-api"
 }
