Configuração de HMG

--- a/app.json
+++ b/app.json
@@ -2,10 +2,11 @@
   "name": "assina",
   "displayName": "Assina",
   "api": {
-    "baseUrl":"http://10.25.32.141:8081/assina-api",
+    "baseUrl":"http://assina.okdhmg.rededor.corp",
     "timeoutMillis": 10000
   },
-  "baseUrl-pre-staging": "http://10.25.32.141:8081/assina-api",
+  "baseUrl-hmg": "http://assina.okdhmg.rededor.corp",
+  "baseUrl-tst": "http://10.25.32.141:8081/assina-api",
   "baseUrl-leonardo-cabo": "http://10.15.48.93:8080/assina-api",
   "baseUrl-leonardo-wifi": "http://10.15.24.90:8080/assina-api"
 }
