--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,5 +1,5 @@
 platform :ios, '9.0'
-require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
+#require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
 target 'assina' do
   # Pods for assina
